--- a/Prediction_titanic.ipynb
+++ b/Prediction_titanic.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mrzebest/MachineDeepLearning/blob/main/Prediction_titanic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "1-WGotwXR61z"
       },
       "source": [
@@ -2851,8 +2861,8 @@
   ],
   "metadata": {
     "colab": {
-      "authorship_tag": "ABX9TyMZtr4Tf5llMlXsEigOP0Ty",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
